# tiralabra

./: .gitignore  README.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
NumNet/: .coverage  .coveragerc  pyproject.toml
NumNet/numnet/: main.py  nn.py  weights_and_biases.pkl
NumNet/tests/: nn_test.py
viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md  viikko7.md
