[tool.poetry]
name = "numnet"
version = "0.1.0"
description = ""
authors = ["Jasse Merivirta <jayzstep@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
