[tool.poetry]
name = "numnet"
version = "0.1.0"
description = ""
authors = ["Jasse Merivirta <jayzstep@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
gradio = "^4.31.5"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.3"
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
